[package]
name = "rogue"
version = "0.1.0"
edition = "2024"

[features]
default = ["render"]
atlas = []
render = []

[dependencies]
bevy = { version = "0.16.1", features = ["wayland"] }
bevy_ecs_tilemap = "0.16.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

